# GameTool

./: .gitignore  CMakeLists.txt
src/FileHandling/: CMakeLists.txt  a.cpp  a.h  a.hpp
src/Model/: CMakeLists.txt  b.cpp  b.h  b.hpp
src/UserInterface/: CMakeLists.txt  main.cpp
